--- a/Redirects/requirements.txt
+++ b/Redirects/requirements.txt
@@ -1,174 +1,9 @@
-absl-py==1.4.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-anyio==3.6.2
-appdirs==1.4.4
-APScheduler==3.6.3
-asgiref==3.6.0
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==4.0.2
-attrs==22.2.0
-autopep8==2.0.2
-beautifulsoup4==4.11.2
-blis==0.7.9
-bs4==0.0.1
-cachetools==4.2.2
-catalogue==2.0.8
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-chromedriver-autoinstaller==0.6.2
-click==8.1.3
+blinker==1.6.3
+click==8.1.7
 colorama==0.4.6
-confection==0.0.4
-cssselect==1.2.0
-cv==1.0.0
-cymem==2.0.7
-dj-database-url==2.0.0
-Django==4.1.7
-django-environ==0.10.0
-djangorestframework==3.14.0
-djangorestframework-jwt==1.11.0
-djangorestframework-simplejwt==5.2.2
-dlib==19.24.0
-dnspython==2.3.0
-docopt==0.6.2
-exceptiongroup==1.1.0
-fake-useragent==1.1.1
-fastapi==0.95.1
-Flask==2.2.3
-Flask-SQLAlchemy==3.0.3
-flatbuffers==23.3.3
-frozenlist==1.3.3
-gast==0.4.0
-google-auth==2.16.2
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==2.0.2
-grpcio==1.51.3
-gunicorn==20.1.0
-h11==0.14.0
-h5py==3.8.0
-html5lib==1.1
-httpcore==0.17.3
-httpx==0.24.1
-idna==3.4
-importlib-metadata==6.0.0
-inflection==0.5.1
+Flask==3.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-jsonschema==4.17.3
-keras==2.11.0
-langcodes==3.3.0
-libclang==15.0.6.1
-llvmlite==0.39.1
-lxml==4.9.2
-Markdown==3.4.1
-MarkupSafe==2.1.2
-MouseInfo==0.1.3
-multidict==6.0.4
-murmurhash==1.0.9
-mysql==0.0.3
-mysql-connector==2.2.9
-mysql-connector-python==8.0.32
-mysqlclient==2.1.1
-numba==0.56.4
-numpy==1.23.5
-oauthlib==3.2.2
-openai==0.27.8
-opencv-python==4.7.0.72
-opt-einsum==3.3.0
-outcome==1.2.0
-packaging==23.0
-pandas==1.5.3
-parse==1.19.0
-pathy==0.10.2
-phonenumbers==8.13.7
-Pillow==9.4.0
-pipreqs==0.4.11
-plyer==2.1.0
-preshed==3.0.8
-protobuf==3.19.6
-psycopg2==2.9.6
-psycopg2-binary==2.9.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-PyAudio==0.2.13
-PyAutoGUI==0.9.53
-pycodestyle==2.10.0
-pycparser==2.21
-pydantic==1.10.7
-pyee==8.2.2
-pygame==2.4.0
-PyGetWindow==0.0.9
-PyJWT==1.7.1
-pymongo==4.3.3
-PyMsgBox==1.0.9
-pyperclip==1.8.2
-pypng==0.20220715.0
-pyppeteer==1.0.2
-pyquery==2.0.0
-PyRect==0.2.0
-pyrsistent==0.19.3
-PyScreeze==0.1.28
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-python-telegram-bot==13.7
-pytube==12.1.2
-pytweening==1.0.4
-pytz==2022.7.1
-pywhatkit==5.4
-qrcode==7.4.2
-requests==2.28.2
-requests-html==0.10.0
-requests-oauthlib==1.3.1
-rsa==4.9
-selenium==4.12.0
-six==1.16.0
-smart-open==6.3.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-SpeechRecognition==3.10.0
-speedtest-cli==2.1.3
-SQLAlchemy==2.0.15
-sqlparse==0.4.3
-srsly==2.4.6
-starlette==0.26.1
-tensorboard==2.11.2
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.11.0
-tensorflow-estimator==2.11.0
-tensorflow-intel==2.11.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.2.0
-thinc==8.1.10
-tomli==2.0.1
-tornado==6.3.3
-tqdm==4.65.0
-trio==0.22.0
-trio-websocket==0.9.2
-typer==0.7.0
-typing_extensions==4.5.0
-tzdata==2023.3
-tzlocal==5.0.1
-urllib3==1.26.14
-uvicorn==0.21.1
-w3lib==2.1.1
-wasabi==1.1.2
-webdriver-manager==3.8.5
-webencodings==0.5.1
-websockets==10.4
-Werkzeug==2.2.3
-whitenoise==6.4.0
-wikipedia==1.4.0
-wrapt==1.15.0
-wsproto==1.2.0
-yarg==0.1.9
-yarl==1.9.2
-zipp==3.15.0
+MarkupSafe==2.1.3
+psycopg2==2.9.9
+Werkzeug==3.0.0
