serving &connecting pages

--- a/Gateway/manifests/secret.yaml
+++ b/Gateway/manifests/secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name:  gate-secret
 stringData:
-  PSQL_PASSWORD: QWF1dGgxMjMK
-type: Opaque
+  PSQL_PASSWORD: Aauth123
+type: Opaque 
