--- a/Profile/manifests/secret.yaml
+++ b/Profile/manifests/secret.yaml
@@ -3,6 +3,6 @@ kind: Secret
 metadata:
   name: profile-secret
 stringData:
-  PSQL_PASSWORD: QWF1dGgxMjMK
+  PSQL_PASSWORD: Aauth123
   SECRET_KEY: cm9tZW9xd2VydHkK
 type: Opaque
