--- a/Redirects/manifests/secret.yaml
+++ b/Redirects/manifests/secret.yaml
@@ -3,5 +3,5 @@ kind: Secret
 metadata:
   name: redirect-secret
 stringData:
-  PSQL_PASSWORD: QWF1dGgxMjMK
+  PSQL_PASSWORD: Aauth123
 type: Opaque
