--- a/Gateway/manifests/configmap.yaml
+++ b/Gateway/manifests/configmap.yaml
@@ -7,6 +7,6 @@ data:
   PSQL_USER: uauth_user
   PSQL_DB: urlauth
   PSQL_PORT: "5432"
-  AUTH_SVC_ADDRESS : "auth:5000"
+  AUTH_SVC_ADDRESS : "10.105.106.78:5000"
   PROFILE_SVC_ADDRESS : "profile:5001"
   REDIRECT_SVC_ADDRESS : "redirect:5002"
