--- a/Gateway/manifests/gate-ingress.yaml
+++ b/Gateway/manifests/gate-ingress.yaml
@@ -16,3 +16,17 @@ spec:
             name: gate
             port: 
               number: 8080
+      - pathType: Prefix
+        path: "/prof/<int:id>"
+        backend:
+          service:
+            name: gate
+            port: 
+              number: 8080
+      - pathType: Prefix
+        path: "/<id>"
+        backend:
+          service:
+            name: gate
+            port: 
+              number: 8080
