--- a/Profile/manifests/profiledeploy.yaml
+++ b/Profile/manifests/profiledeploy.yaml
@@ -3,9 +3,14 @@ kind: Deployment
 metadata:
   name: profile
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: profile
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 3
   template:
     metadata:
       labels:
