--- a/Redirects/Dockerfile
+++ b/Redirects/Dockerfile
@@ -9,5 +9,5 @@ WORKDIR /app
 COPY ./requirements.txt /app
 RUN pip install --no-cache-dir --requirement /app/requirements.txt
 COPY . /app
-
+EXPOSE 7000
 CMD ["python3", "reroute.py"]
