--- a/Auth/requirements.txt
+++ b/Auth/requirements.txt
@@ -7,7 +7,7 @@ greenlet==3.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
-psycopg2-binary==2.9.9
+psycopg2>=2.9.3,<2.10
 typing_extensions==4.8.0
 Werkzeug==3.0.0
 WTForms==3.0.1
