--- a/Profile/requirements.txt
+++ b/Profile/requirements.txt
@@ -9,7 +9,7 @@ idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
-psycopg2==2.9.9
+psycopg2>=2.9.3,<2.10
 urllib3==2.0.6
 Werkzeug==3.0.0
 WTForms==3.1.0
