--- a/Gateway/manifests/service.yaml
+++ b/Gateway/manifests/service.yaml
@@ -1,13 +1,13 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
-  name:  gate-svc
+  name:  gate
 spec:
   selector:
     app:  gate
-  type:  LoadBalancer
+  type:  ClusterIP
   ports:
-  - name:  gate-port
-    protocol: TCP
-    port:  8080
+  - port:  8080
     targetPort:  8080
+    protocol: TCP
+    
