--- a/Redirects/manifests/service.yaml
+++ b/Redirects/manifests/service.yaml
@@ -7,6 +7,6 @@ spec:
     app:  redirect
   type: ClusterIP
   ports:
-  - name:  redirect-port
-    port:  7000
+  - port:  7000
     targetPort:  7000
+    protocol: TCP
